refactor pro booking
